# ofram-parser

./: README.md  main.py  pyproject.toml
parser_folder/: parser.py
src/: config.py
